[package]
name = "todo-back-end"
version = "0.1.0"
authors = ["Miguel Aguilar - Laptop - <maad941011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Framework Web para Rust: Actix
# actix-web: Permite contruir servidores web y aplicaciones  

actix-web = "2.0.0"

# actix-rt: Permite crear tiempos de ejecucion asícronos a un subproceso 
# microservicio 
actix-rt = "1.0.0"  

# Framework para serializar y deserializar estructuras de datos  
serde = {version = "1.0.104", features = ["derive"]}

# Lee la configuracion desde el archivo .env para introducirlo en el entorno 
dotenv = "0.15.0"

# Lee la configuracion desde diferentes fuentes y las carga en un tipo que esta definido en "config.rs"
# Contiene el codigo de configuracion para las variables de entorno 
config = "0.10.1"

# Tokio es un controlador de eventos I/O para aplicaciones asincronas 
# tokio-pg-mapper: facilita el mapeo de estructuras de tablas de postgres  
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
tokio-postgres = "0.5.1"

# deadpool-postgres: es un pool asincrono simple para postgres
deadpool-postgres = "0.5.0"

# Permite hacer get post al cliente local 
#rocket_cors = "0.5.1"
actix-cors = "0.5.3"
warp = "0.3.1"